# CMakeSample

./: CMakeLists.txt  cpu_info.list.in  git-hash.cmake  setup.py  sum_integers.cpp  sum_integers.hpp  version.hpp.in
account/: CMakeLists.txt  __init__.py  account.cpp  account.hpp
cmake/: get_info.cmake
